--- a/2010/thesis/conclusion.tex
+++ b/2010/thesis/conclusion.tex
@@ -2,11 +2,20 @@
 \def\CaptionPrefix{C.}
 \eqn=0\tabn=0\fign=0
 
-\> summary of summaries (per chapter)
+In the first chapter we have presented a number of predictions of the best known hadronic models of elastic $\rm pp$ scattering for two LHC energies $\sqrt s = 7$ and $14\un{TeV}$. A comparison to the first LHC data at $\sqrt s = 7\un{TeV}$ will be shown at the end of this conclusion chapter. Then, in \Sc{el coulomb} we have discussed the interference between the electromagnetic and strong (hadronic) interactions. For the electromagnetic scattering, we have first proposed an effective form-factor that combines the electric and magnetic form factors of the proton. We have expressed our suspicion that the commonly used OPE approximation may not be accurate for momentum transfers $|t|$ above $1\un{GeV^2}$. We outlined several approaches to the Coulomb-hadronic interference. We have found the derivation of \WaY{} formula inconsistent. We have identified a complication in the derivation of \KaL{} formula which, however, has no numerical consequences. All the discussed formulae were derived in $\O{\al}$ approximations. We have compared their predictions to a new eikonal calculation to all orders of $\al$. When the form factors have been omitted, we have found a significant differences. Generally, we have found the formula of \KaL{} the best tool available for experimental data analyses. But still, for momentum transfers above $1\un{GeV^2}$ we expect sizable corrections due to multi-photon exchange effects that are not included in the present eikonal description.
 
-\> plots: unification of the theoretical and experimental effort
+\> chapter 2
+\>> Just section 2.3 -- results preliminary -- for 90m only ty used, ref to totem11-2
 
-\fig{fig/pdf/ttm_mod_cmp_dsdt.pdf}{ttm mod cmp dsdt}{bla}
-\fig{fig/pdf/ttm_mod_cmp_B.pdf}{ttm mod cmp B}{bla}
+In the third chapter, we have described the RP simulation and reconstruction software. The modules developed by the author of this thesis have been then discussed in detail.
 
-\> ref to Jenkovszky \bref{jenkovszky11}
+When the alignment procedure from \Sc{al} was applied to the 2010 LHC runs, the relative misalignments among the sensors of one unit were reduced to about $1\un{\mu m}$ of transverse shift and $0.1\un{mrad}$ of rotation about the beam axis. The alignment of units with respect to the beam was achieved with an uncertainty of about $5\un{\mu m}$ in the horizontal direction and $15\un{\mu m}$ in the vertical (for the run used for the elastic cross-section determination in \Sc{felm}).
+
+In the fifth chapter, we have presented TOTEM's first measurement of the $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$. The final result, compared to the predictions of the models from \Sc{el models} and the model of Jenkovszky et al.~\bref{jenkovszky11}, is shown in \Fg{ttm mod cmp dsdt}. The discriminative power of TOTEM's measurement is evident. In region below the diffractive dip, $|t| \ls 0.5\un{GeV^2}$ there is a relatively good agreement among the models themselves and the measurement. But for momentum transfers $|t|$ between $0.5$ and $1\un{GeV^2}$ the models exhibit rather large spread in their predictions (one and half orders), moreover the measurement of TOTEM does not favour any the presented models. The measurement falls into a gap between two bands of predictions (one band is formed by the models of Islam et al., Petrov et al.~with two pomerons and Jenkovszky et al., the other band is formed by the models of Block et al., Bourrely et al.~and Petrov et al.~with three pomerons).
+
+\fig{fig/pdf/ttm_mod_cmp_dsdt.pdf}{ttm mod cmp dsdt}{Comparison of model predictions and TOTEM's first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
+
+We have extracted the exponential slope $B$ (see \Eq{el B}) from TOTEM's cross-section measurement (thick black histogram in \Fg{ttm mod cmp dsdt}). We have split the histogram into groups of six consecutive bins. Each of these groups was fitted with an exponential, resulting in a point in in \Fg{ttm mod cmp B}. The horizontal error bars indicate the span of the six-bin group, the vertical error bars reflect the fit uncertainty. The discriminative power of this plot is smaller ($B$ accounts only for the ``shape'' and not the normalization of the cross-section), but still one can conclude that the models of Jenkovszky et al.~and of Petrov et al.~(the two-pomeron version) are disfavored by TOTEM's data.
+
+\fig{fig/pdf/ttm_mod_cmp_B.pdf}{ttm mod cmp B}{Comparison of the exponential slope $B$ from model predictions and TOTEM's first measurement of $\rm pp$ differential cross-section at $\sqrt s = 7\un{TeV}$.}
+
