--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -17,8 +17,7 @@ ATLAS ALFA, TDR
 
 \chapter[el]{Elastic scattering of protons}
 
-In this chapter we will discuss the elastic scattering of protons from a theoretical or phenomenological point of view. After defining our terminology on the kinematics and dynamics, we will review some of the most prominent models of $pp$ and $\bar pp$ elastic scattering (see \Sc{el models}). In \Sc{el pred} we will summarize the predictions of these models for two LHC-relevant energies $\sqrt s = 7$ and $14\un{TeV}$. The last section of this chapter, \Sc{el coulomb} will be devoted to the interference between the Coulomb and hadronic interactions.
-\TODO{Move this paragraph into introduction?}
+In this chapter we will discuss the elastic scattering of protons from a theoretical or phenomenological point of view. After defining our terminology on the kinematics and dynamics, we will review some of the most prominent models of $\rm pp$ and $\rm\bar pp$ elastic scattering (see \Sc{el models}). In \Sc{el pred} we will summarize the predictions of these models for two LHC-relevant energies $\sqrt s = 7$ and $14\un{TeV}$. The last section of this chapter, \Sc{el coulomb} will be devoted to the interference between the Coulomb and hadronic interactions.
 
 Let us start by describing the kinematics of elastic scattering events. \Fg{el scat scheme} shows such an event viewed in the center-of-mass (CM) frame (we will always use this frame, unless stated differently). The two incident protons (blue), each with mass $m$, momentum $p$ and energy $E$, approach each other other along the $z$ axis. After the collision, the scattered protons (red) keep the same energy $E$, but their directions are modified. They are described by the \em{scattering angle} $\th$ and \em{azimuthal angle} $\ph$, see \Fg{el scat scheme}.
 
