--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -1,3 +1,18 @@
+#--------------------------------------------- CERN -------------------------------------------------
+
+@Url{cern,
+	title = "European Organization for Nuclear Research"
+	url	= "http://cern.ch/public"
+	year = "2011"
+}
+
+@Url{lhc,
+      author       = "LEFEVRE, C.",
+      title        = "LHC: the guide",
+	url = "http://cdsweb.cern.ch/record/989631/files/brochure-2006-003-eng.pdf",
+	year = "2006"
+}
+
 #--------------------------------------------- TOTEM ------------------------------------------------
 
 @Book{totem04,
@@ -64,6 +79,14 @@
 	title = "Proton-proton elastic scattering at the LHC energy of $\sqrt s = 7\, TeV$",
 	DOI= "10.1209/0295-5075/95/41001",
 	url= "http://dx.doi.org/10.1209/0295-5075/95/41001",
+}
+
+@Article{totem11-2,
+      author       = "ANTCHEV, G.",
+      title        = "First measurements of the total proton-proton cross section
+                      at the LHC energy of √s =7TeV. oai:cds.cern.ch:1383030",
+      month        = "Sep",
+      year         = "2011",
 }
 
 @Thesis{hubert,
@@ -418,6 +441,17 @@
 	doi = "10.1016/0003-4916(59)90051-X",
 }
 
+@Article{froissart61,
+      author         = "FROISSART, M.",
+      title          = "Asymptotic behavior and subtractions in the Mandelstam
+                        representation",
+      journal        = "Phys. Rev.",
+      volume         = "123",
+      pages          = "1053-1057",
+      doi            = "10.1103/PhysRev.123.1053",
+      year           = "1961",
+}
+
 @Article{yennie61,
       author         = "YENNIE, D. R., FRAUTSCHI, S. C. and SUURA, H.",
       title          = "The infrared divergence phenomena and high-energy
@@ -759,6 +793,16 @@
                         nucleon collisions",
       year           = "2005",
       eprint         = "hep-ph/0510040",
+      archivePrefix  = "arXiv",
+}
+
+@Article{bourrely05,
+      author         = "BOURRELY, C. et al."
+      title          = "Why the real part of the proton-proton forward
+                        scattering amplitude should be measured at the LHC",
+      pages          = "125-128",
+      year           = "2005",
+      eprint         = "hep-ph/0511135",
       archivePrefix  = "arXiv",
 }
 
@@ -1407,4 +1451,35 @@
       address      = "Cambridge",
 	  edition		= "1st"
 		ISBN		= "0-521-78039-X"
+}
+
+@Book{pilkuhn67,
+      author       = "PILKUHN, H.",
+      title        = "The Interactions of Hadrons",
+      publisher    = "North-Holland",
+      address      = "Amsterdam",
+      year         = "1967",
+	  ISBN		   = "unknown"
+}
+
+@book{pilkuhn79,
+      author       = "PILKUHN, H.",
+      title        = "Relativistic particle physics",
+      publisher    = "Springer",
+      address      = "New York, NY",
+      series       = "Texts and monographs in physics",
+      year         = "1979",
+	  ISBN		   = "0-387-09348-6"
+}
+
+@Article{pdg10,
+  collaboration = "Particle Data Group"
+  author="NAKAMURA, K. et al.",
+  title="Review of Particle Physics",
+  journal="Journal of Physics G: Nuclear and Particle Physics",
+  volume="37",
+  number="7A",
+  pages="075021",
+  url="http://stacks.iop.org/0954-3899/37/i=7A/a=075021",
+  year="2010",
 }
