--- a/2010/thesis/introduction.tex
+++ b/2010/thesis/introduction.tex
@@ -2,24 +2,61 @@
 \def\CaptionPrefix{I.}
 \eqn=0\tabn=0\fign=0
 
-\> something about forward processes (notably elastic scattering), how interesting they are, related to the structure of the proton
 
-\> these forward process will be measured by TOTEM (see \Sc{ttm}), an experiment at LHC at CERN. Few lines about CERN and LHC.
+The elastic scattering of protons is the simplest $\rm pp$ interaction possible, however, it still presents a challenge for theory to describe it. The complication may be seen in the fact that the coupling constant of quantum chromodynamics (QCD) becomes too large for low energy scales (low momentum transfer is characteristic for the elastic scattering of protons). Consequently, one can not apply the simple perturbation calculations like in quantum electrodynamics (QED) for example. Instead of describing the elastic scattering form first principles, many model descriptions have developed. These more or less QCD-motivated models are often build on Regge theory and/or eikonal formalism grounds. We will discuss several of these models and present their  cross-section predictions for the LHC energies. We will show that the predictions differ considerably, up to several orders of magnitude for higher $|t|$ values (see \Fg{el mod dsdt large}). This wide spread reflects the (dis)ability of our present theoretical description of elastic scattering. It is clear, therefore, that more measurements are needed in order to guide the theoretical research in the right direction.
+% dispersion relations
 
-\> typographical conventions
+Let us also remark that the elastic scattering -- a process, where the protons undergo just a glancing collision and stay intact -- is intimately connected with proton's structure. Thus by studying the elastic scattering, one can learn about the structure of proton (see for example the model of Islam et al.).
 
-\centerline{\vbox{\halign{\strut\qquad #\hfil&\qquad #\hfil&\qquad #\hfil\qquad\cr\ln
+The forward elastic scattering is connected with the total cross-section by the optical theorem. It thus not surprising to find quite large theoretical uncertainty in total cross-section predictions for the LHC. As we will show in \Fg{sigma tot}, the spread of predictions may be as large as from $85$ to $110\un{mb}$ for the energy of $14\un{TeV}$. This is partially due a wide class of plausible energy dependences of the total cross-section (ranging from $s^{\al}$ to $\log^2 s$, see e.g.~Sec.~7.1 in \bref{barone}) and partially due to large uncertainties of the cosmic-ray data and the conflicting Tevatron measurements. With these data, one hardly any of the proposed theoretical descriptions over another. Again, it is clear that new and precise data are needed (in fact, TOTEM has recently made its first measurement of the total cross-section, as indicated in \Fg{sigma tot}).
+% Froissart?
+
+In the previous paragraphs we shown the need for new measurements of the elastic and total cross-sections in the high-energy regions. For that purpose, the TOTEM experiment has been built at the LHC accelerator at CERN.
+
+Despite the name of CERN derived from French ``Conseil Europ\' een pour la Recherche Nucl\' eaire'', CERN \bref{cern} is the world's largest center for particle physics research. It is located on the French-Swiss border near Geneva and it includes several interlinked particle accelerators. CERN's and also world's largest accelerator is the LHC \bref{lhc} (Large Hadron Collider). It has a circular shape (see \Fg{lhc}) which circumference of almost $27\un{km}$. It accelerates two beams of opposite directions. The beams can be either consist of protons or lead ions. The maximum design energy is $7\un{TeV}$ for protons and $2.76\un{TeV}$ per nucleon for ions. For the moment, the LHC accelerates protons to the energy of $3.5\un{TeV}$, which still makes a world record. The accelerator is not a perfect circle -- it consists of eight arcs and eight straight sections for insertions. Each of the arcs contains 154 superconducting bending magnets operated at $1.9\un{K}$ and producing a magnetic field of $8.3\un{T}$. Some of the eight insertions (drawn as circles in \Fg{lhc}) are used by physics experiments, some are allocated for service tasks such as beam injection, cleaning and dump. In total there are six experiments at the LHC: ALICE (A Large Ion Collider Experiment), ATLAS (A Toroidal LHC Apparatus), CMS (the Compact Muon
+Solenoid), LHCb (the Large Hadron Collider beauty), LHCf (the Large Hadron Collider forward) and TOTEM (TOTal Elastic and diffractive cross section Measurement). For their physics programmes see for example \bref{cern}.
+
+The TOTEM experiment is dedicated to forward hadronic phenomena. It will measure (or have already made first measurements of) the total cross-section, elastic scattering differential cross-section in a wide kinematic range and a large spectrum of diffractive processes. We will describe the experiment in \Sc{ttm} in a greater detail.
+
+
+\fig{fig/pdf/lhc.pdf}{lhc}{Aerial view of the region around CERN (with the lake of Geneva and the Alps in the background). The LHC is drawn in red, its eight insertions are marked by red dots and labeled in red. In yellow, we have marked the two sectors relevant for the TOTEM experiment.}
+
+
+%%%%%%%%%%%%%%%%%%%%
+
+In this thesis, we will devote the first chapter to a theoretical discussion of proton-proton elastic scattering. For this process, only the strong and electromagnetic interactions are relevant. We will first focus on the former, traditionally called hadronic interaction. We will review some of the best known hadronic models (\Sc{el models}) and present their predictions for two LHC-relevant energies $7$ and $14\un{TeV}$ (\Sc{el pred}). Then, in \Sc{el coulomb} we will discuss the interference between the electromagnetic and strong interaction. We will summarize the most common approaches and review the relations among them. We will present a new eikonal calculation to all orders of $\al$, the fine structure constant. We conclude this section by making numerical comparisons between various interference formulae for the center-of-mass energy $7\un{TeV}$.
+
+In the second chapter, we will show what requirements the programme of TOTEM imposes on its detector apparatus. In \Sc{ttm} we will review the three sub-detectors: the telescopes T1, T2 and the system of movable Roman Pots. The forward protons (thus also elastic) are detected by the Roman Pot detectors -- in \Sc{rp measurement} the principle of this measurement. The last section of this chapter, \Sc{ttm tcs}, is devoted to the measurement of the total cross-section and, in particular, to the extrapolation of the elastic amplitude to $t=0\un{GeV^2}$.
+
+In the third chapter, we will describe the Roman Pot simulation and reconstruction software. The simulation part is used to obtain a detailed information on the processes that occur between a proton is emitted in an interaction and when a signal from the Roman Pot detectors is registered. This includes beam-smearing effects, interaction of the proton with the magnetic field of the LHC, interaction of the proton in the Roman Pots, energy deposition in the silicon sensors and signal processing in the front-end chip. A good understanding of these effects is essential for developing and tuning the reconstruction modules. That means modules that deduce the scattered proton kinematics from the Roman Pot measurements.
+
+The fourth chapter is dedicated to Roman Pot detector alignment -- that is a determination of the positions of the Roman Pot sensors with respect to each other and with respect to the beam. This procedure has three steps: collimation alignment, track-based alignment and alignment with physics processes. During the collimation alignment, \Sc{al collim}, the Roman Pot motor control is calibrated with respect to the collimators of the LHC and consequently with respect to the beam. The track-base alignment, \Sc{al tb}, analyses track hits recorded by Roman Pots. Their residuals (elongations from the track fit) are used to extract sensor misalignments (deviations from their nominal positions). Thanks to the overlap between the vertical and horizontal Roman Pots, the track-based technique can establish the relative alignment of all sensors with each station. Then, physics processes can be used to align the sensors with respect to the beam. For that purpose one may exploit symmetries of certain physics process -- see \Sc{al prof}. A particularly good candidate is the elastic scattering. It possesses the azimuthal symmetry and moreover its two anti-parallel protons can be used for aligning the Roman Pots in the opposite arms. This method is discussed in \Sc{al elast}.
+
+The fifth chapter describes the elastic scattering measurement at the LHC, made by TOTEM. We will first present the analysis strategy and then give details on the background determination and subtraction (\Sc{felm bckg}) and the unfolding of the resolution effects (\Sc{felm unfold}).
+
+Comparisons of the model predictions from \Sc{el} to the measurement results from \Sc{felm} will be shown in the conclusion chapter.
+
+This thesis refers to the state of TOTEM from the beginning of the year 2011. The results achieved since then have not been included.
+
+%%%%%%%%%%%%%%%%%%%%
+
+Let us finish the introduction by presenting the typographical conventions that we will use in what follows.
+
+\centerline{\vbox{\halign{\bstrut\qquad #\hfil&\qquad #\hfil&\qquad #\hfil\qquad\cr\ln
 structure			& example				& font/symbol\cr\ln
 scalar				& $s$ 					& italics\cr
 vector				& $\vec v$				& bold\cr
 element of vector	& $v_i$					& italics\cr
 dot product			& $\vec v\cdot \vec w$	& middle dot\cr
-matrix				& $\mat M$				& slanted\cr\ln
+cross product		& $\vec v\times \vec w$	& cross\cr
+matrix				& $\mat M$				& slanted\cr
+state				& $\ket\ps$				& ket\cr
+operator element	& $\mel{\ph}{\op A}{\ps}$ & bra-ket, operator with hat\cr
 software parameter  & \pmt{parameter}		& typewriter\cr\ln
 }}}
 
-\> standar abbreviations Eq., Tab., Fig. (+Figs, ...), Sec. + Ch.
+%\> standar abbreviations Eq., Tab., Fig. (+Figs, ...), Sec. + Ch.
 
-\> this thesis refers to the state of TOTEM for a given date: end of 2010, no newer results
+
 
 \def\CaptionPrefix{\currentChapterNumber.}
