--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -22,7 +22,7 @@
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1.5cm
 \else
-	\def\FootText{(VERSION 10)}
+	\def\FootText{(VERSION 11)}
 \fi
 
 \def\pmt#1{{\tt #1}}
@@ -85,7 +85,12 @@ In Prague, date
 
 %----------------------------------------------------------------------------------------------------
 
-\hbox{}\vfil
+\hbox{}%
+
+\pdfdest name {AbstractPage} xyz
+\pdfoutline goto name {AbstractPage} count 0 {Abstract}%
+
+\vfil
 
 \halign{\hbox to 5.3cm{\strut#\hss}&\vbox{\advance\hsize-5.3cm\noindent\ #}\cr
 N\' azev pr\' ace: 		&Elastick\' y rozptyl na LHC\cr
@@ -94,19 +99,23 @@ Katedra:				& \' Ustav \v c\' asticov\' e a jadern\' e fyziky\cr
 Vedoucí doktorské práce:& RNDr. Vojt\v ech Kundr\' at, DrSc., Fyzik\' aln\' i \' ustav AV \v CR, v.~v.~i.\cr
 						& Mario Deile, PhD, CERN, \v Zeneva\cr
 Abstrakt:				& [abstract of 80-200 words in Czech]\cr
-Kl\v i\v cov\' a slova:	& [3-5 keywords in Czech]\cr
+Kl\v i\v cov\' a slova:	& elastický rozptyl protonů, TOTEM, římské hrnce, alignment\cr
 }
 
 \vfil
 
-\halign{\hbox to 5.3cm{\strut#\hss}&\vbox{\advance\hsize-5.3cm\noindent\ #}\cr
+\halign{\hbox to 5.4cm{\strut#\hss\ }&\vtop{\advance\hsize-5.4cm\noindent#}\cr
 Title:		& Elastic scattering at the LHC\cr
 Author:		& Jan Ka\v spar\cr
 Departement:& Institute of Particle and Nuclear Physics\cr
 Supervisors of the doctoral thesis:& RNDr. Vojt\v ech Kundr\' at, DrSc., Institute of Physics AS CR\cr
 			& Mario Deile, PhD, CERN, Geneva\cr
-Abstract:	& [abstract of 80-200 words in English]\cr
-Keywords:	& [ 3-5 keywords in English]\cr
+%Abstract:	& [abstract of 80-200 words in English]\cr
+Abstract:	& 
+The elastic scattering of protons is the simplest $pp$ interaction possible, however, it still presents a challenge for the theory. In this thesis we discuss the elastic scattering from theoretical as well as experimental point of view. In the theory part, we present several models and their predictions for the LHC. We also discuss the Coulomb-hadronic interference, where we present a new eikonal calculation to all orders of $\al$.
+\cr
+%Keywords:	& [ 3-5 keywords in English]\cr
+Keywords:	& elastic scattering of protons, TOTEM, Roman Pots, alignment\cr
 }
 
 \vfil
