--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -6,15 +6,21 @@ TOTEM, RP, T1, T2, IP, BPM, BLM
 
 % Approach: why, what, how
 
-\TODO{Briefly repeat the motivation from the introduction: The forward hadronic physics is one of the least explored and understood areas of the particle physics.}
-
 The TOTEM experiment \bref{totem04,totem08,totem10} is dedicated to measurement of forward hadronic phenomena at the LHC. The tree pillars of its physics programme are:
 \> elastic scattering measurement in a wide $t$-range,
 \> total cross-section measurement and
 \> a study of soft and hard diffraction.
 
-
 We have discussed theoretical/phenomenological description of the elastic scattering in \Sc{el}. Looking at the model predictions in \Fg{el mod dsdt large}, one can see differences of several orders of magnitude. TOTEM plans to measure the differential cross-section in the $|t|$-range from about $10^{-3}\un{GeV^2}$ (the domain of Coulomb-hadronic interference) to more than $10\un{GeV^2}$. This large coverage can be achieved by exploiting several running scenarios -- see the end of \Sc{rp measurement}. \TODO{The aimed precision is such that TOTEM will be able to confirm or rule out the model predictions and thus focus the direction of the theoretical research.}
+
+%\fig{fig/pdf/sigma_tot.pdf}{sigma tot}{Fits from the COMPETE collaboration \bref{cudell02} to all available $\rm pp$ and $\rm \bar pp$ data on the tota%l cross-section. The thick solid line represents the best fit with statistical error band. The dashed lines show the total error band from all models c%onsidered.}
+
+\fig{fig/pdf/ttm_sigma_tot.pdf}{sigma tot}{\TODO{...}
+COMPETE collaboration \bref{cudell02} to all available $\rm pp$ and $\rm \bar pp$ data on the total cross-section.
+The thick solid line represents the best fit. \TODO{added the errors from the other models}
+TOTEM \bref{totem11-2}
+PDG \bref{pdg10}
+}
 
 As much as the model predictions differ for the elastic cross-section, they differ for the total-cross section. From Tab.~2 in \bref{kklp11} one can read a variation between $95$ and $110\un{mb}$. Extrapolations from lower energy measurements, see \Fg{sigma tot}, yield even higher uncertainty: from about $85\un{mb}$ to $120\un{mb}$. TOTEM plans to measure the total cross-section with the luminosity independent method, see \Sc{ttm tcs} for details. This method takes as an input the elastic and inelastic event rates and thus is closely related to the other two points of the physics programme. TOTEM aims at the final precision about $1\percent$, which would provide a decisive answer to many total-cross-related hypothesis.
 
@@ -28,6 +34,7 @@ it can be rephrased as the presence of scattering products at high pseudorapidit
 TOTEM's physics programme thus sets special requirements for the detector apparatus. In particular large rapidity coverage - to detect most fragments from inelastic collisions and excellent acceptance for outgoing elastic and diffractive protons. To accomplish this task, TOTEM comprises three sub-detectors: the \em{telescopes T1 and T2} and a system of \em{Roman Pots} (RPs). The role of the telescopes is to detect the products of inelastic collisions. They are able to reconstruct many tracks per event and extrapolate them to the interaction point. This is essential for background rejection. The telescopes were designed to stand the high radiation load expected at their location. The role of the RP system is to detect the surviving protons. As indicated in \Fg{ttm processes}, these are scattered to very low angles. That is why the RPs are installed far from the IP (scattered protons can gain larger elongations from the beam) and can be approached very close to the beam (to detect protons with small elongation, that is with small scattering angles). For safety reasons, no detectors are allowed to be inside the beam-pipe before the beam is stable. This means that the RPs must be movable beam-pipe insertions, retracted to a safe position during beam fill and adjustments and approached close to the beam for measurements. All three sub-detectors are trigger capable which is essential for the total cross-section measurement.
 
 
+
 %\TODO{add the phi vs. eta diagram to explain the forwardness?}
 %\fig{fig/pdf/ttm_acceptance_overview.pdf}{ttm acceptance overview}{acceptance overview}
 
@@ -36,7 +43,7 @@ TOTEM's physics programme thus sets special requirements for the detector appara
 
 \section[ttm det]{Detector apparatus}
 
-\Fg{ttm det overview} shows an overview of the detector apparatus of TOTEM. All detectors are placed symmetrically about IP5 (which is shared with the CMS experiment). 
+\Fg{ttm det overview} shows an overview of the detector apparatus of TOTEM. All detectors are placed symmetrically about the interaction point 5 which is shared with the CMS experiment. See \Fg{lhc} (in the introduction chapter) for the geographical location of IP5 and the orientation of the sectors 45 and 56.
 
 \fig{fig/pdf/ttm_det_overview.pdf}{ttm det overview}{An overview of the TOTEM detectors. All detectors are installed symmetrically left (sector 45) and right (sector 56) of the interaction point 5 (IP5). Only the \rhs~is shown in the figure. Bottom part: the structure of the LHC around IP5. The vertical boxes represent quadrupole (Q) and dipole (D) magnets. D1 is the separation magnet -- splitting each beam to its proper beam-line, see the \rhs~of the figure. The RP stations at $147$ and $220\un{m}$ are shown by red dots (each dot represents a unit). Upper box: zoomed region (see the guiding dashed lines) around the IP5 -- the telescopes (red) T1 and T2 embedded into the CMS detector (gray). The T1 telescopes are installed inside the CMS end-caps, the T2 telescopes on the outer side of the CMS HF calorimeters.
 }
@@ -74,7 +81,7 @@ The GEM detectors are gaseous detectors where the electron multiplication is rea
 \emfig
 
 
-\block{The RPs system}
+\block{The Roman Pot system}
 
 The system of Roman Pots (RPs) consists of four stations as shown in \Fg{ttm det overview}. Each station (see \Fg{rp station}) is formed by two units. Each unit includes horizontal, top and bottom RP and a Beam Position Monitor (BPM), see \Fg{rp unit}. A Roman Pot itself is shown in \Fg{rp pot}. In order to minimize the material budget in the path of detectable protons, the RP walls are replaced by the thin window around the sensors. Its front face is $500\un{\mu m}$ thick, the face exposed to the beam only $150\un{\mu m}$. Inside each RP, there is a detector package (DP), see \Fg{rp package}. It is package of 5 back-to-back mounted pairs of hybrids. A hybrid is an electronic board carrying an edgeless silicon sensor and four read-out (VFAT) chips, as shown in \Fg{rp hybrid}. Each RP station is followed by a series of Beam Loss Monitors (BLM), the role of which is to monitor the beam losses induced by the RP operations. One of the nearest BLMs is shown in \Fg{rp blm bpm}. Further details on the RP system can be found in Ch.~4 in \bref{totem08}.
 
@@ -225,13 +232,7 @@ Now let us describe the run conditions used for the first elastic scattering mea
 
 \section[ttm tcs]{The total cross-section}
 
-An important parameter of the hadronic (strong) interaction is its total cross-section. This not to be confused with the total cross-section of the proton-proton scattering. The latter is infinite due to the long range of the electromagnetic force. Whenever we write the total cross-section or $\si_{\rm tot}$ we will mean the one due to the hadronic interaction only.
-
-\> TOTEM is going to measure it
-\>> how important that is
-\>> use the new picture
-
-\fig{fig/pdf/sigma_tot.pdf}{sigma tot}{Fits from the COMPETE collaboration \bref{cudell02} to all available $\rm pp$ and $\rm \bar pp$ data on the total cross-section. The thick solid line represents the best fit with statistical error band. The dashed lines show the total error band from all models considered.}
+\TODO{An important parameter of the hadronic (strong) interaction is its total cross-section}. This not to be confused with the total cross-section of the proton-proton scattering. The latter is infinite due to the long range of the electromagnetic force. Whenever we write the total cross-section or $\si_{\rm tot}$ we will mean the one due to the hadronic interaction only.
 
 TOTEM plans to use the luminosity-independent method. This method avoids using any luminosity measurement, which is usually subject to a large uncertainty. Instead, the method exploits the optical theorem. If one takes its ``spin-less'' approximation \Eq{el spinless si} and combines it with the definition of luminosity $N = {\cal L} \si$ (relating an event rate $N$ to an cross-section $\si$) and with the decomposition of the total cross-section to the elastic and inelastic part $\si_{\rm tot} = \si_{\rm el} + \si_{\rm inel}$, one obtains:
 \eqref{
@@ -261,7 +262,7 @@ The previous parameterization is related to the hadronic amplitude $\FH$. Howeve
 \fig{fig/pdf/ext_smearing.pdf}{ext smearing}{[7cm]The relative difference between cross-sections after and before the resolution smearing. The expected angular resolutions are shown in \Fg{elr 1535 dth} ($1535\un{m}$ optics) and \Fg{elr 90 dth} ($90\un{m}$ optics).}
 \emfig
 
-\def\OutlineLabel{Extrapolation for be* = 1535 m optics}
+\def\OutlineLabel{Extrapolation for beta* = 1535 m optics}
 \block{Extrapolation for $\be^* = 1535\un{m}$ optics}
 
 Since the Coulomb-interaction effects are relevant for this optics and since these effects act on the level of amplitude (not cross-section, see \Sc{el coulomb}), we need to extend the parameterization \Eq{ext M par} to include also a phase component. \Fg{el mod phase} suggests that, for $|t| \ls 0.25\un{GeV^2}$, a polynomial parameterization is adequate again. Thus, the hadronic amplitude can be parameterized as:
@@ -319,5 +320,3 @@ N_{\rm inel}	& \vbox{\hsize7cm\noindent\strut Total inelastic rate (error domina
 &\hbox{Total for } \si_{\rm tot} & 5\percent & 1\div2\percent \cr\bln
 &\hbox{Total for } {\cal L} & 7\percent & 2\percent \cr\bln
 }
-
-
