--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -64,9 +64,17 @@
 
 %----------------------------------------------------------------------------------------------------
 
-The ``thanks page''.
+\line{\hss To my family -- for their amazing support}
+\bgroup
+\input utf8-csf
+\line{\hss Mé rodině -- za jejich svkělou podporu}
+\egroup
 
-\vfil\eject
+\vfil
+
+The thanks...
+
+\eject
 
 %----------------------------------------------------------------------------------------------------
 
@@ -92,15 +100,18 @@ In Prague, date
 
 \vfil
 
+\bgroup
+\input utf8-csf
 \halign{\hbox to 5.3cm{\strut#\hss}&\vbox{\advance\hsize-5.3cm\noindent\ #}\cr
-N\' azev pr\' ace: 		&Elastick\' y rozptyl na LHC\cr
-Autor:					& Jan Ka\v spar\cr
-Katedra:				& \' Ustav \v c\' asticov\' e a jadern\' e fyziky\cr
-Vedoucí doktorské práce:& RNDr. Vojt\v ech Kundr\' at, DrSc., Fyzik\' aln\' i \' ustav AV \v CR, v.~v.~i.\cr
-						& Mario Deile, PhD, CERN, \v Zeneva\cr
+Název práce: 			& Elastický rozptyl na LHC\cr
+Autor:					& Jan Kašpar\cr
+Katedra:				& Ústav částicové a jaderné fyziky\cr
+Vedoucí doktorské práce:& RNDr.~Vojtěch Kundrát, DrSc., Fyzikální ústav AV ČR, v.~v.~i.\cr
+						& Mario Deile, PhD, CERN, Ženeva\cr
 Abstrakt:				& [abstract of 80-200 words in Czech]\cr
-Kl\v i\v cov\' a slova:	& elastický rozptyl protonů, TOTEM, římské hrnce, alignment\cr
+Klíčová slova:			& elastický rozptyl protonů, TOTEM, římské hrnce, alignment\cr
 }
+\egroup
 
 \vfil
 
@@ -108,11 +119,12 @@ Kl\v i\v cov\' a slova:	& elastický rozptyl protonů, TOTEM, římské hrnce, a
 Title:		& Elastic scattering at the LHC\cr
 Author:		& Jan Ka\v spar\cr
 Departement:& Institute of Particle and Nuclear Physics\cr
-Supervisors of the doctoral thesis:& RNDr. Vojt\v ech Kundr\' at, DrSc., Institute of Physics AS CR\cr
+Supervisors of the doctoral thesis:& RNDr.~Vojt\v ech Kundr\' at, DrSc., Institute of Physics AS \v CR\cr
 			& Mario Deile, PhD, CERN, Geneva\cr
 %Abstract:	& [abstract of 80-200 words in English]\cr
 Abstract:	& 
-The elastic scattering of protons is the simplest $pp$ interaction possible, however, it still presents a challenge for the theory. In this thesis we discuss the elastic scattering from theoretical as well as experimental point of view. In the theory part, we present several models and their predictions for the LHC. We also discuss the Coulomb-hadronic interference, where we present a new eikonal calculation to all orders of $\al$.
+The elastic scattering of protons is the simplest $\rm pp$ interaction possible, however, it still presents a challenge for the theory. In this thesis we discuss the elastic scattering from theoretical as well as experimental point of view. In the theory part, we present several models and their predictions for the LHC. We also discuss the Coulomb-hadronic interference, where we present a new eikonal calculation to all orders of $\al$, the fine-structure constant. In the experimental part we introduce the TOTEM experiment which is dedicated, among others, to the measurement of the elastic scattering at the LHC. This measurement is performed primarily with Roman Pot (RP) detectors -- movable beam-pipe insertions hundreds of meters from the interaction point, that can detect protons scattered to very small angles. We discuss some aspects of the RP simulation and reconstruction software. A great detail is devoted to the technique of RP alignment -- a method of determination of the relative positions among the RP sensors and their position with respect to the beam. The thesis terminates with a presentation of the analysis of the first elastic scattering measurement at the LHC, made by TOTEM.
+
 \cr
 %Keywords:	& [ 3-5 keywords in English]\cr
 Keywords:	& elastic scattering of protons, TOTEM, Roman Pots, alignment\cr
@@ -138,9 +150,6 @@ Keywords:	& elastic scattering of protons, TOTEM, Roman Pots, alignment\cr
 \input alignment.tex
 \input first_el_measurement.tex
 \input conclusion.tex
-
-%\appendices
-%\input appendices.tex
 
 %----------------------------------------------------------------------------------------------------
 
