ch2 and conclusion completed
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5162 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -73,6 +73,18 @@
 \vfil
 
 The thanks...
+\iffalse
+\> Vojtech and Mario -- my supervisors, did a lot for me
+
+\> the TOTEM team -- my work would not be possible otherwise
+\>> especially the software group -- for ... collaboration, Leszek for repository maintanace
+\> Hubert and Karsten -- many interesting, stimulating and "making thinking" discussions
+\> Valentina -- ever ready to help, reading the Ch. 3
+\> Simone -- cooperation on Ch. 5
+
+\> my family -- as above -- for their support and ecouragement
+\>> especially to my wife Pavla and my parents Marie and Jaroslav
+\fi
 
 \eject
 
