--- a/2010/thesis/conclusion.tex
+++ b/2010/thesis/conclusion.tex
@@ -4,8 +4,7 @@
 
 In the first chapter we have presented a number of predictions of the best known hadronic models of elastic $\rm pp$ scattering for two LHC energies $\sqrt s = 7$ and $14\un{TeV}$. A comparison to the first LHC data at $\sqrt s = 7\un{TeV}$ will be shown at the end of this conclusion chapter. Then, in \Sc{el coulomb} we have discussed the interference between the electromagnetic and strong (hadronic) interactions. For the electromagnetic scattering, we have first proposed an effective form-factor that combines the electric and magnetic form factors of the proton. We have expressed our suspicion that the commonly used OPE approximation may not be accurate for momentum transfers $|t|$ above $1\un{GeV^2}$. We outlined several approaches to the Coulomb-hadronic interference. We have found the derivation of \WaY{} formula inconsistent. We have identified a complication in the derivation of \KaL{} formula which, however, has no numerical consequences. All the discussed formulae were derived in $\O{\al}$ approximations. We have compared their predictions to a new eikonal calculation to all orders of $\al$. When the form factors have been omitted, we have found a significant differences. Generally, we have found the formula of \KaL{} the best tool available for experimental data analyses. But still, for momentum transfers above $1\un{GeV^2}$ we expect sizable corrections due to multi-photon exchange effects that are not included in the present eikonal description.
 
-\> chapter 2
-\>> Just section 2.3 -- results preliminary -- for 90m only ty used, ref to totem11-2
+In \Sc{ttm tcs} we have presented the luminosity-independent method of total cross-section measurement and suggested two methods of the extrapolation to $t=0\un{GeV^2}$. We have calculated total cross-section uncertainty estimates $1\div2\percent$ for the high-$\be^*$ optics and $5\percent$ for the medium-$\be^*$ optics. There are several reasons to regard these values as very preliminary, most notably the nominal (expected) optics and beam parameters have been used. Recently TOTEM has made its first measurements with the $90\un{m}$ optics (see \bref{totem11-2}) and it seems that the emittance can easily be reduced to about a half and that the horizontal scattering angle can be reconstructed with a reasonable precision. Consequently, one could exploit the same extrapolation technique as for the high-$\be^*$ optics. This brings us to an optimistic conclusion that for the medium-$\be^*$ optics one may expect a better precision than the above quoted uncertainty.
 
 In the third chapter, we have described the RP simulation and reconstruction software. The modules developed by the author of this thesis have been then discussed in detail.
 
